# r1cs-float

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: bench.rs
examples/: inference.rs  training.rs
src/: f32.rs  f64.rs  float.rs  inference.rs  lib.rs  macros.rs  main.rs  training.rs  traits.rs  utils.rs
src/groth16/: data_structures.rs  generator.rs  mod.rs  prover.rs  r1cs_to_qap.rs  verifier.rs
src/groth16/logderivarg/: mod.rs
src/r1cs/: constraint_system.rs  mod.rs
src/r1cs_std/: alloc.rs  eq.rs  macros.rs  mod.rs  select.rs
src/r1cs_std/bits/: boolean.rs  mod.rs
src/r1cs_std/fields/: mod.rs
src/r1cs_std/fields/fp/: cmp.rs  mod.rs
