[package]
name = "zk_linear_regression"
version = "0.0.0"
edition = "2021"

[dependencies]
ark-bls12-381 = { version = "^0.3.0" }
ark-std = { version = "^0.3.0" }
ark-r1cs-std = { version = "^0.3.0" }
ark-relations = { version = "^0.3.0" }
ark-ff = { version = "^0.3.0" }
ark-groth16 = "^0.3.0"
rand = { version = "^0.8.0" }
num = { version = "^0.4.0", features = ["rand"] }

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3