[package]
name = "r1cs_float"
version = "0.0.0"
edition = "2021"

[dependencies]
ark-r1cs-std = "^0.3.0"
ark-relations = "^0.3.0"
ark-ff = { version = "^0.3.0", features = ["asm"] }
rand = "^0.8.0"
num = { version = "^0.4.0", features = ["rand"] }

[dev-dependencies]
criterion = "^0.3.0"
ark-groth16 = "^0.3.0"
ark-bls12-381 = "^0.3.0"
rayon = "^1.5.3"

[[bench]]
name = "bench"
harness = false

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[lib]
bench = false